[package]
name = "mail-client"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1", features = ["derive"] }
rpassword = "0.0.4"
rustls-native-certs = "0.6"
rustls = "0.20"
rustls-pemfile = "1.0"
rust-pop3-client = "0.2.1"
regex = "1"